WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108504
HRTFElevation segfault if a null AudioBus is returned by loadPlatformResource
https://bugs.webkit.org/show_bug.cgi?id=108504
Summary
HRTFElevation segfault if a null AudioBus is returned by loadPlatformResource
Jesus Sanchez-Palencia
Reported
2013-01-31 11:02:12 PST
In static AudioBus* getConcatenatedImpulseResponsesForSubject(const String& subjectName), there is no check for a null concatenatedImpulseResponses after: OwnPtr<AudioBus> concatenatedImpulseResponses = AudioBus::loadPlatformResource(subjectName.utf8().data(), ResponseSampleRate); Patch is coming.
Attachments
Patch
(1.88 KB, patch)
2013-01-31 11:11 PST
,
Jesus Sanchez-Palencia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jesus Sanchez-Palencia
Comment 1
2013-01-31 11:11:39 PST
Created
attachment 185820
[details]
Patch
Philippe Normand
Comment 2
2013-02-01 00:47:21 PST
LGTM, Chris what do you think?
Kenneth Russell
Comment 3
2013-02-01 10:44:32 PST
Comment on
attachment 185820
[details]
Patch Looks OK to me.
WebKit Review Bot
Comment 4
2013-02-01 11:01:47 PST
Comment on
attachment 185820
[details]
Patch Clearing flags on attachment: 185820 Committed
r141611
: <
http://trac.webkit.org/changeset/141611
>
WebKit Review Bot
Comment 5
2013-02-01 11:01:51 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug